gitops/generated/erp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp
  namespace: erp

spec:
  selector:
    app: erp

  ports:
  - name: http
    port: 8000
    targetPort: 8000

  type: ClusterIP
