gitops/generated/erp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp
  namespace: erp

spec:
  ingressClassName: traefik

  rules:
  - host: erp.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: erp
            port:
              number: 8000
